--- a/Sort_Research.cfg
+++ b/Sort_Research.cfg
@@ -31,5 +31,5 @@
 -M
 -$M16384,1048576
 -K$00400000
--LE"c:\program files (x86)\borland\delphi7\Projects\Bpl"
--LN"c:\program files (x86)\borland\delphi7\Projects\Bpl"
+-LE"w:\delphi\delphi7\Projects\Bpl"
+-LN"w:\delphi\delphi7\Projects\Bpl"
